# bevy_config_file

./: Cargo.toml  README.md
docs/plans/: 2026-03-03-multi-format-implementation.md  2026-03-03-multi-format-support-design.md
src/: lib.rs
tests/: integration_tests.rs
